test/asm/interpolation.err
error: interpolation.asm(18):
    Interpolated symbol "undef" does not exist
error: interpolation.asm(22):
    Interpolated symbol "label" does not exist
error: interpolation.asm(29):
    Interpolated symbol "foo" is not a numeric or string symbol
error: Assembly aborted (3 errors)!
